--- a/style.css
+++ b/style.css
@@ -198,6 +198,9 @@ border-radius: 10px;
 text-align: center;
 margin-bottom: 100px;
 }
+.Service{
+    margin-bottom: 85px;
+}
 .ser{
     display: flex;
     width: 50%;
@@ -275,7 +278,7 @@ font-size: 40px;
     margin-bottom: 20px;
 }
 .p1s{
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
 .serfe1{
     display: flex;
@@ -295,13 +298,15 @@ box-shadow: 2px 2px 5px blue;
  transform: translateY(-3px);
 }
 .serff{
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
+
+    width: 46%;
     border: 1px solid gray;
     border-radius: 10px;
-    padding: 40px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 10px;
     text-align: center;
+    
 }
 .serb{
     display: flex;
@@ -322,5 +327,119 @@ box-shadow: 2px 2px 5px blue;
 }
 .bi-shield-check{
     font-size: 35px;
+    color: blue;
+}
+.hh1{
+    display: inline-flex;
+    align-items: center;
+    text-decoration: none;
+    gap: 3px;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.5s ease;
+}
+#hh1{
+    transition: all 0.5s ease;
+}
+.hh1:hover #hh1{
+    transform: translateX(5px);
+}
+/* Style the tab */
+.tab {
+    display: flex;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  width: 350px;
+  border-radius: 50px;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  width: 33.3%;
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  border-radius: 50px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ccc;
+  color: blue;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: blue;
+  color: white;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  
+  border-top: none;
+}
+.tabc{
+    display: flex;
+}
+.tabc1{
+    width: 33%;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid gray;
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    transition: all 0.5s ease;
+}
+.tabc1:hover{
+    border: 1px solid blue;
+    transform: translateY(-3px);
+}
+.tabc1:hover .tabch .bihed .bi-headset{
+    transform: scale(1.1);
+}
+.h1ss{
+margin-bottom: 40px;
+font-size: 20px;
+font-weight: 600;
+}
+.p1ss{
+    margin-bottom: 40px;
+    color: gray;
+}
+.btnview{
+    color: blue;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin-bottom: 40px;
+    border: 1px solid blue;
+    background-color: inherit;
+}
+.btnview:hover{
+background-color: blue;
+color: white;
+}
+.tabch{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+.bihed{
+    width: 70px;
+    height: 70px;
+    background-color:color-mix(in srgb, blue, transparent 90%) ;
+    border-radius: 10px;
+}
+.hedset{
+    font-size: 50px;
+    font-weight: 400;
     color: blue;
 }
