--- a/style.css
+++ b/style.css
@@ -598,6 +598,8 @@ box-shadow: 2px 2px 5px blue;
     align-items: center;
     gap: 12px;
     padding:15px;
+    background-color: #ffffff;
+        box-shadow: 3px 3px 12px 2px lightblue;
 }
 .torphy-item{
     display: flex;
@@ -605,7 +607,7 @@ box-shadow: 2px 2px 5px blue;
     justify-content: center;
     width: 50px;
     height: 50px;
-    background-color: #ccc;
+    background-color: #0b1ae91a;
     
 }
 .award-item1{
@@ -1076,7 +1078,7 @@ color: white;
 .fwci{
     width: 95px;
     height: 55px;
-    background-color: gainsboro;
+    background-color: #0b1ae91a;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1095,7 +1097,7 @@ color: white;
     padding: 4px 10px;
     border-radius: 20px;
     color: blue;
-    background-color: #ccc;
+    background-color: #0b1ae91a;
 }
 .fwcl{
     display: flex;
@@ -1264,9 +1266,8 @@ color: blue;
     width: 60px;
     height: 60px;
     border-radius: 50%;
-        background: 
- color-mix(in srgb, #0b1ae9, transparent 80%);
     color: blue;
+    background-color: #0b1ae91a;
     font-size: 30px;
 }
 .priche{
@@ -1349,7 +1350,7 @@ color: blue;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ccc;
+    background-color: #0b1ae91a;
 }
 .bi-patch-question{
     color: blue;
